Fixed bug 1267409 - updated Gigabit Twitter handle

--- a/bedrock/gigabit/templates/gigabit/apply.html
+++ b/bedrock/gigabit/templates/gigabit/apply.html
@@ -132,7 +132,7 @@
         <div class="content">
           <h2>{{ _('How to Apply') }}</h2>
           <p>
-          {% trans url_mailto='mailto:gigabit@mozilla.com', url_twitter='//twitter.com/mozillagigabit', url_hive_kc='http://hivekc.org', url_hive_cha='http://hivecha.org' %}
+          {% trans url_mailto='mailto:gigabit@mozilla.com', url_twitter='https://twitter.com/MozGig', url_hive_kc='http://hivekc.org', url_hive_cha='http://hivecha.org' %}
             We’re here to help make applying for a Gigabit Community Fund grant as easy as possible! We strongly encourage you to get in touch with us via <a href='{{ url_mailto }}'>email</a> or <a href='{{ url_twitter }}'>Twitter</a> as you prepare your application. Going to a meetup hosted by <a href='{{ url_hive_kc }}'>Hive KC</a> or <a href='{{ url_hive_cha }}'>Hive CHA</a> is another great way to get help on your proposal.
           {% endtrans %}
           </p>
