--- a/media/css/firefox/new/redesign/common.less
+++ b/media/css/firefox/new/redesign/common.less
@@ -24,7 +24,8 @@
 
 .inner-container,
 .launch-area,
-#benefits ul {
+#benefits ul,
+.subscribe-container {
     width: @widthDesktop - (@baseLine * 2);
     margin: 0 auto;
 
@@ -149,73 +150,6 @@ main {
         margin-top: @baseLine;
         .font-size(@largeFontSize);
         font-style: italic;
-    }
-}
-
-#benefits {
-    padding: (@baseLine * 3) 0;
-    .clearfix;
-    background: #11336b;
-
-    ul {
-        position: relative;
-        list-style-type: none;
-        margin: 0 auto;
-        padding: 0;
-        text-align: center;
-
-        li {
-            float: left;
-            margin: 0;
-            padding: 0;
-            width: 33.3%;
-
-            @media only screen and (max-width: @breakTablet) {
-                float: none;
-                width: auto;
-                margin-bottom: @baseLine * 2;
-            }
-        }
-    }
-
-    h2 {
-        position: relative;
-        padding-top: 73px;
-        font-weight: bold;
-        .font-size(22px);
-
-        &:before {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 49px;
-            content: '';
-            background-image: url('/media/img/firefox/new/redesign/benefits-sprite.png');
-            background-repeat: no-repeat;
-        }
-
-        &.performance:before {
-            background-position: center -59px;
-        }
-
-        &.privacy:before {
-            background-position: center -118px;
-        }
-
-        &.good:before {
-            background-position: center top;
-        }
-    }
-
-    p {
-        .font-size(18px);
-        padding: 0 @baseLine;
-    }
-
-    a {
-        .font-size(18px);
-        color: @textColorSpaceYellow;
     }
 }
 
