Update text, cleanup
Removed extraneous line
Added links
Added text about committee determination of reward.

--- a/bedrock/security/templates/security/web-bug-bounty.html
+++ b/bedrock/security/templates/security/web-bug-bounty.html
@@ -23,6 +23,7 @@
         <li>Security bug must be a remote exploit, compromise user data, allow access to Mozilla infrastructure or resources, or easily manipulate a user.</li>
         <li>Submitter must not be the author of the buggy code nor otherwise involved in its contribution to the Mozilla project (such as by providing check-in reviews).</li>
         <li>Employees of the Mozilla Foundation and its subsidiaries are ineligible.</li>
+        <li>Community volunteer members involved with bug handling/who have security bug access are not eligible during their period of involvement.</li>
       </ul>
 
       <p>If two or more people report the bug together, or working independently at approximately the same time, the reward will be divided between them.</p>
@@ -40,6 +41,8 @@
         <li>What is the step-by-step exploit process?</li>
         <li>What is the security impact?</li>
       </ol>
+      
+      <p>Please submit all bugs through the <a href="https://bugzilla.mozilla.org/form.web.bounty">Bugzilla web bounty form.</a> Do not submit bugs by email.</p>
 
       <h3>What is the attack scenario?</h3>
 
@@ -93,14 +96,14 @@
 
       <h2>Rewards Amounts</h2>
 
-      <p>Vulnerabilities found in Mozilla Web applications and services are eligible for bounties between $500 (USD) and $4000 (USD), for extraordinary or critical vulnerabilities in valid web applications or Mozilla services. Rewards for some critical sites can be even higher (e.g. FxAccounts, FindMyDevice, Update Services, Bugzilla)</p>
+      <p>Vulnerabilities found in Mozilla Web applications and services are eligible for bounties between $500 (USD) and $3000 (USD), for extraordinary or critical vulnerabilities in valid web applications or Mozilla services. Rewards for some critical sites can be even higher (e.g. FxAccounts, FindMyDevice, Update Services, Bugzilla)</p>
 
       <p>Bounties will be awarded for sec-critical, sec-high, or sec-moderate rated security bugs that meet the following criteria:</p>
 
       <ul>
-        <li>Security bug is present in the web properties outlined in the <a href="{{ url('security.bug-bounty.faq-webapp') }}">Web Application Security Bounty FAQ</a>.</li>
         <li>Security bug is on the list of sites which part of the bounty. See the eligible bugs section of the <a href="{{ url('security.bug-bounty.faq-webapp') }}">Web Application Security Bounty FAQ</a> for the list of sites which are included under the bounty.</li>
         <li>More information about this program can be found in the <a href="{{ url('security.bug-bounty.faq-webapp') }}">Web Application Security Bounty FAQ</a>.</li>
+        <li>The risk determination and bounty reward are based on the sole determination of the bounty committee after analysis of the bug, it's impact, the difficulty of successful exploitation, and the resource impacted.</li>
       </ul>
     </div>
   </article>
