--- a/bedrock/security/templates/security/bug-bounty/faq-webapp.html
+++ b/bedrock/security/templates/security/bug-bounty/faq-webapp.html
@@ -293,7 +293,7 @@
           directly to you, do I have to keep the bug confidential and not publish
           information about it in order to receive a reward?</dt>
         <dd class="answer">
-          <p>No. W'ere rewarding you for finding a bug, not trying to buy
+          <p>No. We're rewarding you for finding a bug, not trying to buy
             your silence. However if you report the bug through the standard
             Mozilla process and haven’t already published information about it then
             we do ask that you follow the guidelines set forth in the official
