--- a/bedrock/security/templates/security/bug-bounty/faq-webapp.html
+++ b/bedrock/security/templates/security/bug-bounty/faq-webapp.html
@@ -276,7 +276,7 @@
         <dt class="question" id="what-next">Once I have found a
           vulnerability, what next?</dt>
         <dd class="answer">
-          <srtong></srtong><p>Follow the <a href="https://www.mozilla.org/en-US/security/web-bug-bounty/">guide on submitting a web or service security bug</a> and then <a href="https://bugzilla.mozilla.org/form.web.bounty">
+          <strong><p>Follow the <a href="https://www.mozilla.org/en-US/security/web-bug-bounty/">guide on submitting a web or service security bug</a> and then <a href="https://bugzilla.mozilla.org/form.web.bounty">
             file a bug</a>.</strong>
             When filing, please verify that you have followed the guidance on how to
             write your report in order to assure it is evaluated as quickly as possible.
